# Job-Hunting-and-Preparation-Agent

./: .env.example  README.md  main.py  pyproject.toml  test.py  tools.py
config/: tasks.yaml
knowledge/: resume.txt
output/: company_research.md  interview_prep.md  rewritten_resume.md
